tests/paczka1/small_fuzzy/43656148.err
Error in line 2: Rz1PBE S164 0,8
Error in line 7: Fg9iSBDq A348 129,61
